k8s/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 2
  selector:
    matchLabels: { app: django }
  template:
    metadata:
      labels: { app: django }
    spec:
      containers:
        - name: django
          image: ghcr.io/OWNER/REPO/bestcars-django:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: { path: /, port: 8000 }
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  selector: { app: django }
  ports:
    - port: 8000
      targetPort: 8000
