k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestcars-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bestcars.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: { number: 80 }
          - path: /dealers
            pathType: Prefix
            backend:
              service:
                name: django
                port: { number: 8000 }
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django
                port: { number: 8000 }
